# python-application-template

./: README.md  pyproject.toml
.github/workflows/: build.yml  publish.yml
src/: __main__.py  demo_pyvisa.py  demo_textual.py  pyvisa_app.py
src/pyvisapp/: app.py  style.tcss
tests/: test_demo.py
