[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python-project-template"
description = "Demo project description."
version = "0.0.1"
authors = [{name = "Your Name"}]
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["template", "demo", "project"]
dependencies = [
  "textual",
  "pyvisa",
  "pyvisa-py[serial,usb,psutil,hislip-discovery]"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3"
]

[project.urls]
Repository = "https://github.com/alexis-giraudet/python-project-template.git"

[project.gui-scripts]
demo-pyvisa = "demo_pyvisa:main"
demo-textual = "demo_textual:main"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = "src"
